# non-overlapping-rules-ensemble

./: README.md  pyproject.toml  tree_subspacing_best_rules.ipynb  usage_example.ipynb
note/: note.py  test_note.py
reduction/: api.py  classification.py  extract_rules.py  genetic_utils.py  join.py  measure_adjacencies.py  non_overlapping_rules_ensemble.py  rule_measures.py  utils.py
